deploy: 207d8d82132df50cb74bf96bbb66ba8ba848c595

--- a/print.html
+++ b/print.html
@@ -762,6 +762,10 @@ If you are still having trouble, please file an issue or contact us at <a href="
 </ul>
 </li>
 </ul>
+<h2><a class="header" href="#error-missing-external-dependency-usrlibswiftwasistatic-executable-argslnk" id="error-missing-external-dependency-usrlibswiftwasistatic-executable-argslnk">`error: missing external dependency '.../usr/lib/swift/wasi/static-executable-args.lnk'</a></h2>
+<p>You may encounter this error while building with Swift SDK for WebAssembly and <code>swiftc</code> driver command. Unfortunately, Swift SDK does not support building with <code>swiftc</code> command yet, so you need to use <code>swift build</code> Swift Package Manager command instead.</p>
+<p>e.g. <code>swift build --swift-sdk &lt;SDK name&gt;</code></p>
+<p>See also: <a href="getting-started/./swift-package.html">Compile a SwiftPM package to WebAssembly</a></p>
 <h1><a class="header" href="#examples" id="examples">Examples</a></h1>
 <p>This section shows you example usage of our toolchain.</p>
 <h1><a class="header" href="#importing-a-function-from-host-environments" id="importing-a-function-from-host-environments">Importing a function from host environments</a></h1>
