--- a/getting-started/debugging.html
+++ b/getting-started/debugging.html
@@ -182,6 +182,9 @@ can help in the investigation if the debugged binary does not rely on integratio
 We recommend splitting your packages into separate executable targets, most of which shouldn't 
 assume the availability of JavaScript to make debugging easier.</p>
 <p><img src="https://raw.githubusercontent.com/kateinoigakukun/wasminspect/master/assets/demo.gif" alt="demo" /></p>
+<h2><a class="header" href="#a-hrefhttpsgithubcomkateinoigakukunwasm-memprofwasm-memprofa" id="a-hrefhttpsgithubcomkateinoigakukunwasm-memprofwasm-memprofa"><a href="https://github.com/kateinoigakukun/wasm-memprof">wasm-memprof</a></a></h2>
+<p>If you are debugging memory leaks, <a href="https://github.com/kateinoigakukun/wasm-memprof">wasm-memprof</a> can help you.
+It is a tool to profile memory usage of WebAssembly applications with minimal setup. Check the repository for more details.</p>
 
                     </main>
 
