--- a/print.html
+++ b/print.html
@@ -720,6 +720,9 @@ can help in the investigation if the debugged binary does not rely on integratio
 We recommend splitting your packages into separate executable targets, most of which shouldn't 
 assume the availability of JavaScript to make debugging easier.</p>
 <p><img src="https://raw.githubusercontent.com/kateinoigakukun/wasminspect/master/assets/demo.gif" alt="demo" /></p>
+<h2><a class="header" href="#a-hrefhttpsgithubcomkateinoigakukunwasm-memprofwasm-memprofa" id="a-hrefhttpsgithubcomkateinoigakukunwasm-memprofwasm-memprofa"><a href="https://github.com/kateinoigakukun/wasm-memprof">wasm-memprof</a></a></h2>
+<p>If you are debugging memory leaks, <a href="https://github.com/kateinoigakukun/wasm-memprof">wasm-memprof</a> can help you.
+It is a tool to profile memory usage of WebAssembly applications with minimal setup. Check the repository for more details.</p>
 <h1><a class="header" href="#troubleshooting" id="troubleshooting">Troubleshooting</a></h1>
 <p>These are some common issues you may run into while using SwiftWasm.</p>
 <p>If you are having trouble that is not listed here, try searching for it in the <a href="https://github.com/swiftwasm/swift/issues">SwiftWasm issue tracker</a>.
