--- a/getting-started/debugging.html
+++ b/getting-started/debugging.html
@@ -184,7 +184,17 @@ assume the availability of JavaScript to make debugging easier.</p>
 <p><img src="https://raw.githubusercontent.com/kateinoigakukun/wasminspect/master/assets/demo.gif" alt="demo" /></p>
 <h2><a class="header" href="#a-hrefhttpsgithubcomkateinoigakukunwasm-memprofwasm-memprofa" id="a-hrefhttpsgithubcomkateinoigakukunwasm-memprofwasm-memprofa"><a href="https://github.com/kateinoigakukun/wasm-memprof">wasm-memprof</a></a></h2>
 <p>If you are debugging memory leaks, <a href="https://github.com/kateinoigakukun/wasm-memprof">wasm-memprof</a> can help you.
-It is a tool to profile memory usage of WebAssembly applications with minimal setup. Check the repository for more details.</p>
+It is a tool to profile memory usage of WebAssembly applications with a few lines of setup code:</p>
+<pre><code class="language-javascript">import { WMProf } from &quot;wasm-memprof&quot;;
+import { SwiftDemangler } from &quot;wasm-memprof/plugins/swift-demangler.js&quot;;
+
+const swiftDemangler = SwiftDemangler.create();
+const WebAssembly = WMProf.wrap(globalThis.WebAssembly, {
+  demangler: swiftDemangler.demangle.bind(swiftDemangler),
+});
+</code></pre>
+<p>Check the repository for more details.</p>
+<img width="1000" alt="swift-wmprof" src="https://github.com/user-attachments/assets/c1da4582-e721-45b9-9bca-ce320711f72d">
 
                     </main>
 
