--- a/getting-started/troubleshooting.html
+++ b/getting-started/troubleshooting.html
@@ -202,7 +202,7 @@ If you are still having trouble, please file an issue or contact us at <a href="
 </ul>
 </li>
 </ul>
-<h2><a class="header" href="#error-missing-external-dependency-usrlibswiftwasistatic-executable-argslnk" id="error-missing-external-dependency-usrlibswiftwasistatic-executable-argslnk">`error: missing external dependency '.../usr/lib/swift/wasi/static-executable-args.lnk'</a></h2>
+<h2><a class="header" href="#error-missing-external-dependency-usrlibswiftwasistatic-executable-argslnk" id="error-missing-external-dependency-usrlibswiftwasistatic-executable-argslnk"><code>error: missing external dependency '.../usr/lib/swift/wasi/static-executable-args.lnk'</code></a></h2>
 <p>You may encounter this error while building with Swift SDK for WebAssembly and <code>swiftc</code> driver command. Unfortunately, Swift SDK does not support building with <code>swiftc</code> command yet, so you need to use <code>swift build</code> Swift Package Manager command instead.</p>
 <p>e.g. <code>swift build --swift-sdk &lt;SDK name&gt;</code></p>
 <p>See also: <a href="./swift-package.html">Compile a SwiftPM package to WebAssembly</a></p>
