--- a/getting-started/porting.html
+++ b/getting-started/porting.html
@@ -224,6 +224,18 @@ and they had to be disabled. These types are therefore absent in SwiftWasm Found
 <p>Related functions and properties on other types are also absent or disabled. We would like to make
 them available in the future as soon as possible, and <a href="../contribution-guide/index.html">we invite you to 
 contribute</a> and help us in achieving this goal!</p>
+<h2><a class="header" href="#xctest" id="xctest">XCTest</a></h2>
+<p><a href="https://github.com/swiftlang/swift-corelibs-xctest">The swift-corelibs-xctest project</a> is available
+in WebAssembly platforms, and you can use it to write tests for your SwiftWasm projects.</p>
+<p>The following XCTest features are unavailable in SwiftWasm:</p>
+<table><thead><tr><th>API</th><th>Status</th></tr></thead><tbody>
+<tr><td><code>XCTestExpectation</code></td><td>❌ Unavailable</td></tr>
+<tr><td><code>XCTNSPredicateExpectation</code></td><td>❌ Unavailable</td></tr>
+<tr><td><code>XCTNSNotificationExpectation</code></td><td>❌ Unavailable</td></tr>
+<tr><td><code>XCTWaiter</code></td><td>❌ Unavailable</td></tr>
+<tr><td><code>XCTest.perform</code></td><td>❌ Unavailable</td></tr>
+<tr><td><code>XCTest.run</code></td><td>❌ Unavailable</td></tr>
+</tbody></table>
 
                     </main>
 
