--- a/examples/exporting-function.html
+++ b/examples/exporting-function.html
@@ -93,7 +93,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../getting-started/index.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../getting-started/setup.html"><strong aria-hidden="true">2.1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="../getting-started/porting.html"><strong aria-hidden="true">2.2.</strong> Porting code from other platforms</a></li><li class="chapter-item expanded "><a href="../getting-started/browser-app.html"><strong aria-hidden="true">2.3.</strong> Creating a browser app</a></li><li class="chapter-item expanded "><a href="../getting-started/javascript-interop.html"><strong aria-hidden="true">2.4.</strong> JavaScript interoperation</a></li><li class="chapter-item expanded "><a href="../getting-started/concurrency.html"><strong aria-hidden="true">2.5.</strong> Concurrency</a></li><li class="chapter-item expanded "><a href="../getting-started/multithreading.html"><strong aria-hidden="true">2.6.</strong> Multithreading</a></li><li class="chapter-item expanded "><a href="../getting-started/testing.html"><strong aria-hidden="true">2.7.</strong> Testing your app</a></li><li class="chapter-item expanded "><a href="../getting-started/vscode.html"><strong aria-hidden="true">2.8.</strong> Visual Studio Code</a></li><li class="chapter-item expanded "><a href="../getting-started/debugging.html"><strong aria-hidden="true">2.9.</strong> Debugging</a></li><li class="chapter-item expanded "><a href="../getting-started/troubleshooting.html"><strong aria-hidden="true">2.10.</strong> Troubleshooting</a></li></ol></li><li class="chapter-item expanded "><a href="../examples/index.html"><strong aria-hidden="true">3.</strong> Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../examples/importing-function.html"><strong aria-hidden="true">3.1.</strong> Importing function</a></li><li class="chapter-item expanded "><a href="../examples/exporting-function.html" class="active"><strong aria-hidden="true">3.2.</strong> Exporting function</a></li><li class="chapter-item expanded "><a href="../examples/example-projects.html"><strong aria-hidden="true">3.3.</strong> Example projects</a></li></ol></li><li class="chapter-item expanded "><a href="../contribution-guide/index.html"><strong aria-hidden="true">4.</strong> Contribution Guide</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../contribution-guide/how-to-build-toolchain.html"><strong aria-hidden="true">4.1.</strong> How to build the toolchain</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../getting-started/index.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../getting-started/setup.html"><strong aria-hidden="true">2.1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="../getting-started/porting.html"><strong aria-hidden="true">2.2.</strong> Porting code</a></li><li class="chapter-item expanded "><a href="../getting-started/browser-app.html"><strong aria-hidden="true">2.3.</strong> Creating a browser app</a></li><li class="chapter-item expanded "><a href="../getting-started/javascript-interop.html"><strong aria-hidden="true">2.4.</strong> JavaScript interoperation</a></li><li class="chapter-item expanded "><a href="../getting-started/concurrency.html"><strong aria-hidden="true">2.5.</strong> Concurrency</a></li><li class="chapter-item expanded "><a href="../getting-started/multithreading.html"><strong aria-hidden="true">2.6.</strong> Multithreading</a></li><li class="chapter-item expanded "><a href="../getting-started/testing.html"><strong aria-hidden="true">2.7.</strong> Testing your app</a></li><li class="chapter-item expanded "><a href="../getting-started/vscode.html"><strong aria-hidden="true">2.8.</strong> Visual Studio Code</a></li><li class="chapter-item expanded "><a href="../getting-started/debugging.html"><strong aria-hidden="true">2.9.</strong> Debugging</a></li><li class="chapter-item expanded "><a href="../getting-started/troubleshooting.html"><strong aria-hidden="true">2.10.</strong> Troubleshooting</a></li></ol></li><li class="chapter-item expanded "><a href="../examples/index.html"><strong aria-hidden="true">3.</strong> Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../examples/importing-function.html"><strong aria-hidden="true">3.1.</strong> Importing function</a></li><li class="chapter-item expanded "><a href="../examples/exporting-function.html" class="active"><strong aria-hidden="true">3.2.</strong> Exporting function</a></li><li class="chapter-item expanded "><a href="../examples/example-projects.html"><strong aria-hidden="true">3.3.</strong> Example projects</a></li></ol></li><li class="chapter-item expanded "><a href="../contribution-guide/index.html"><strong aria-hidden="true">4.</strong> Contribution Guide</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../contribution-guide/how-to-build-toolchain.html"><strong aria-hidden="true">4.1.</strong> How to build the toolchain</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -160,6 +160,22 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#exporting-function-for-host-environment" id="exporting-function-for-host-environment">Exporting function for host environment</a></h1>
+<h2><a class="header" href="#swift-60-or-later" id="swift-60-or-later">Swift 6.0 or later</a></h2>
+<p>If you use Swift 6.0 or later, you can use <code>@_expose(wasm, &quot;add&quot;)</code> and omit the <code>--export</code> linker flag.</p>
+<pre><code class="language-swift">// File name: lib.swift
+@_expose(wasm, &quot;add&quot;)
+@_cdecl(&quot;add&quot;) // This is still required to call the function with C ABI
+func add(_ lhs: Int, _ rhs: Int) -&gt; Int {
+    return lhs + rhs
+}
+</code></pre>
+<p>Then you can compile the Swift code with the following command without <code>--export</code> linker flag.</p>
+<pre><code class="language-bash">$ swiftc \
+    -target wasm32-unknown-wasi \
+    -parse-as-library \
+    lib.swift -o lib.wasm \
+    -Xclang-linker -mexec-model=reactor
+</code></pre>
 <h2><a class="header" href="#swift-510-or-earlier" id="swift-510-or-earlier">Swift 5.10 or earlier</a></h2>
 <p>You can expose a Swift function for host environment using special attribute and linker option.</p>
 <pre><code class="language-swift">// File name: lib.swift
@@ -211,22 +227,6 @@ const addFn = instance.exports.add;
 console.log(&quot;2 + 3 = &quot; + addFn(2, 3))
 </code></pre>
 <p>If you use SwiftPM package, you can omit linker flag using clang's <code>__atribute__</code>. Please see <a href="https://github.com/swiftwasm/JavaScriptKit/pull/91/files">swiftwasm/JavaScriptKit#91</a> for more detail info</p>
-<h2><a class="header" href="#swift-60-or-later" id="swift-60-or-later">Swift 6.0 or later</a></h2>
-<p>If you use Swift 6.0 or later, you can use <code>@_expose(wasm, &quot;add&quot;)</code> and omit the <code>--export</code> linker flag.</p>
-<pre><code class="language-swift">// File name: lib.swift
-@_expose(wasm, &quot;add&quot;)
-@_cdecl(&quot;add&quot;) // This is still required to call the function with C ABI
-func add(_ lhs: Int, _ rhs: Int) -&gt; Int {
-    return lhs + rhs
-}
-</code></pre>
-<p>Then you can compile the Swift code with the following command without <code>--export</code> linker flag.</p>
-<pre><code class="language-bash">$ swiftc \
-    -target wasm32-unknown-wasi \
-    -parse-as-library \
-    lib.swift -o lib.wasm \
-    -Xclang-linker -mexec-model=reactor
-</code></pre>
 
                     </main>
 
