--- a/getting-started/vscode.html
+++ b/getting-started/vscode.html
@@ -168,7 +168,7 @@
 <ul>
 <li><a href="https://code.visualstudio.com/">Visual Studio Code</a></li>
 <li><a href="https://marketplace.visualstudio.com/items?itemName=sswg.swift-lang">Swift for Visual Studio Code</a></li>
-<li><a href="https://swift.org/install">Swift Development Snapshot</a> (<code>swift-DEVELOPMENT-SNAPSHOT-2024-09-04-a</code> or later)</li>
+<li><a href="https://swift.org/install">Swift OSS Toolchain</a> (6.1 or later)</li>
 <li><a href="./setup-snapshot.html">Swift SDK for WebAssembly</a></li>
 </ul>
 <h2><a class="header" href="#configure-your-swiftpm-package" id="configure-your-swiftpm-package">Configure your SwiftPM package</a></h2>
